Adds history of AIoTRC platforms.

--- a/index.html
+++ b/index.html
@@ -33,6 +33,50 @@
           <h3>Computer &amp; Information Technology Engineering Department</h3>
           <h5><a href="https://aiotrc.github.io/">@aiotrc</a></h5>
         </section>
+        <section>
+          <div class="toc"></div>
+        </section>
+        <section>
+          <div class="toc" data-selected="0">
+        </section>
+        <section>
+          <h2>Summer-2016 ~ Summer-2017</h2>
+          <ul>
+            <li>Model-Based Data Communication</li>
+            <li>Monotonic Architecture</li>
+            <li>Minimum Viable Product (MVP)</li>
+            <li>No Project, No Users</li>
+            <li>Under real-load for near one year</li>
+          </ul>
+        </section>
+        <section>
+          <div class="toc" data-selected="1">
+        </section>
+        <section>
+          <h2>Summer-2017 ~ Winter-2019</h2>
+          <ul>
+            <li>LoRa Integration</li>
+            <li>Script-Based Data Communication</li>
+            <li>Users, Premissions, etc.</li>
+            <li>ISRC Specific Product</li>
+            <li>Nonsense features and web-backend</li>
+          </ul>
+        </section>
+        <section>
+          <div class="toc" data-selected="3">
+        </section>
+        <section>
+          <ul>
+            <li>Model-Based and Script-Based Data Communication</li>
+            <ul>
+              <li>High Performance with Model-Based</li>
+              <li>Find a better way for Script-Based with Logical Performance</li>
+            </ul>
+            <li>Microservice Architecture</li>
+            <li>Reduce Web-Backend Functionalities</li>
+            <li>Users have projects, projects have things and things have assets</li>
+          </ul>
+        </section>
         <section data-background-image="img/thank-you.jpeg">
         </section>
       </div>
@@ -75,7 +119,8 @@
             },
             callback: function() { toc.initToCOnLoad([
               'Conference Room',
-              'ISRC Platform'
+              'ISRC Platform',
+              'The Future',
             ]); }
           }
         ]
