Updates slides information.

--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@
           <div class="toc" data-selected="0">
         </section>
         <section>
-          <h2>Summer-2016 ~ Summer-2017</h2>
+          <h3>Summer-2016 ~ Summer-2017</h3>
           <ul>
             <li>Model-Based Data Communication</li>
             <li>Monotonic Architecture</li>
@@ -53,17 +53,17 @@
           <div class="toc" data-selected="1">
         </section>
         <section>
-          <h2>Summer-2017 ~ Winter-2019</h2>
+          <h3>Summer-2017 ~ Winter-2019</h3>
           <ul>
             <li>LoRa Integration</li>
             <li>Script-Based Data Communication</li>
-            <li>Users, Premissions, etc.</li>
+            <li>Users, Permissions, etc.</li>
             <li>ISRC Specific Product</li>
-            <li>Nonsense features and web-backend</li>
+            <li>Nonsense features and complex web-backend</li>
           </ul>
         </section>
         <section>
-          <div class="toc" data-selected="3">
+          <div class="toc" data-selected="2">
         </section>
         <section>
           <ul>
@@ -72,10 +72,13 @@
               <li>High Performance with Model-Based</li>
               <li>Find a better way for Script-Based with Logical Performance</li>
             </ul>
-            <li>Microservice Architecture</li>
+            <li><span class="material-italic">Micro</span>service Architecture</li>
             <li>Reduce Web-Backend Functionalities</li>
-            <li>Users have projects, projects have things and things have assets</li>
+            <li>Users have projects, projects have things, things have assets and assets have <span class="material-bold">types</span></li>
           </ul>
+        </section>
+        <section>
+          <img src="https://raw.githubusercontent.com/I1820/I1820.github.io/src/documentation/I1820.png" alt="i1820-architecture" height="750px">
         </section>
         <section data-background-image="img/thank-you.jpeg">
         </section>
