--- a/index.html
+++ b/index.html
@@ -56,8 +56,11 @@
           <h3>Summer-2017 ~ Winter-2019</h3>
           <ul>
             <li>LoRa Integration</li>
+            <li>LAN Integration</li>
             <li>Script-Based Data Communication</li>
             <li>Users, Permissions, etc.</li>
+            <li>Security Features</li>
+            <li>Management Protal</li>
             <li>ISRC Specific Product</li>
             <li>Nonsense features and complex web-backend</li>
           </ul>
@@ -75,10 +78,25 @@
             <li><span class="material-italic">Micro</span>service Architecture</li>
             <li>Reduce Web-Backend Functionalities</li>
             <li>Users have projects, projects have things, things have assets and assets have <span class="material-bold">types</span></li>
+            <li>Complete Security Features</li>
+            <li>Separate Management Portal with Open-Source Tools</li>
           </ul>
         </section>
         <section>
           <img src="https://raw.githubusercontent.com/I1820/I1820.github.io/src/documentation/I1820.png" alt="i1820-architecture" height="750px">
+        </section>
+        <section>
+          <h3>Put Platrom to Work</h3>
+          <ul>
+            <li><span class="material-bold">Milestone 1:</span> Up and Running version with student access</li>
+            <li><span class="material-bold">Milestone 2:</span> Big Data Analysing</li>
+          </ul>
+          <h3>Create new Platform</h3>
+          <ul>
+            <li><span class="material-italic">Milestone 1:</span> LAN/LoRa Integration + Projects/Things/Assets + Users</li>
+            <li><span class="material-italic">Milestone 2:</span> Users management + Permissions</li>
+            <li><span class="material-italic">Milestone 3:</span> Geo-Location APIs</li>
+          </ul>
         </section>
         <section data-background-image="img/thank-you.jpeg">
         </section>
