Adds business plans.

--- a/index.html
+++ b/index.html
@@ -98,6 +98,33 @@
             <li><span class="material-italic">Milestone 3:</span> Geo-Location APIs</li>
           </ul>
         </section>
+        <section>
+          <h4>Defined boundaries in the number of Things and Users</h4>
+        </section>
+        <section>
+          <h2>Platform as a Service</h2>
+          <ul>
+            <li>Prepaid Model</li>
+            <li>You don't pay for your sensors and actuators</li>
+            <li>You don't pay for your projects</li>
+            <li>APIs are here for your applications</li>
+            <li>Only pay for API calls over 1000</li>
+          </ul>
+        </section>
+        <section>
+          <h2>Joint IoT Ecosystem</h2>
+          <ul>
+            <li>Delegates their specific application to us</li>
+          </ul>
+        </section>
+        <section>
+          <h2>IoT Application Center</h2>
+          <ul>
+            <li>Connects developers to end-users</li>
+            <li>Applications are on top of the Platform</li>
+            <li>End-Users can use these applications to gain added-values</li>
+          </ul>
+        </section>
         <section data-background-image="img/thank-you.jpeg">
         </section>
       </div>
