Adds point about deployment.

--- a/index.html
+++ b/index.html
@@ -62,6 +62,8 @@
             <li>Security Features</li>
             <li>Management Protal</li>
             <li>ISRC Specific Product</li>
+            <li>Horizontal Scalability</li>
+            <li>It didn't deploy in stable datacenter</li>
             <li>Nonsense features and complex web-backend</li>
           </ul>
         </section>
@@ -94,6 +96,7 @@
           <h3>Create new Platform</h3>
           <ul>
             <li><span class="material-italic">Milestone 1:</span> LAN/LoRa Integration + Projects/Things/Assets + Users</li>
+            <li><span class="material-italic">Milestone 1.5:</span> Deployment</li>
             <li><span class="material-italic">Milestone 2:</span> Users management + Permissions</li>
             <li><span class="material-italic">Milestone 3:</span> Geo-Location APIs</li>
           </ul>
