--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no">
 
-    <title>Timeline</title>
+    <title>To The Future</title>
 
     <link rel="icon" type="image/icon" href="img/favicon.png">
 
@@ -29,7 +29,7 @@
       <div class="slides">
         <section data-background-image="img/background.jpeg" data-background-opacity="0.2">
           <h2>The Future of</h2>
-          <h1>AIoTRC IoT Platforms</h1>
+          <h1>Aolab</h1>
           <h3>Computer &amp; Information Technology Engineering Department</h3>
           <h5><a href="https://aiotrc.github.io/">@aiotrc</a></h5>
         </section>
